# xops-browser-automation

./: .gitignore  README.md  automation_test.py  cloudops.py  compliance_scan.py  config.py  dom_cleaning.py  finops.py  functions_info.md  functions_info.txt  interactive_elements.py  local llm call.txt  login_script.py  main.py  one_shot_llm.py  pyproject.toml
