[project]
name = "browser-automation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "langchain-core>=1.4.0",
    "langchain-openai>=1.2.1",
    "langgraph>=1.2.0",
    "openai>=2.35.1",
    "playwright>=1.59.0",
    "python-dotenv>=1.2.2",
]
